# -imgui

./: .gitignore  CMakeLists.txt  README.md  build.sh
java/: build_dex.sh
java/src/com/aimgui/: BinderBoot.java  Helper.java
jni/: Android.mk  Application.mk  imgui_prebuilt.mk
jni/include/imgui/: imconfig.h
jni/include/ui/: keyboard.h  main_ui.h  ui.h
jni/src/: app.cpp  app.h  main.cpp
jni/src/core/: Android.mk  bloom_gl.cpp  bloom_gl.h  bloom_vk.cpp  bloom_vk.h  bloom_vk_spv.h  font.cpp  font.h  frame_pacer.h  ime_bridge.cpp  ime_bridge.h  keyboard_input.cpp  keyboard_input.h  renderer.cpp  renderer.h  renderer_factory.cpp  renderer_gl.cpp  renderer_vk.cpp  termux_input.cpp  termux_input.h  window_session.cpp  window_session.h
jni/src/core/shaders/: blur.frag  composite.frag  fs_quad.vert  threshold.frag
jni/src/helper/: binder_bootstrap.cpp
jni/src/imgui/: Android.mk
jni/src/platform/: ANativeWindowCreator.h  Android.mk  TouchHelperA.cpp
jni/src/ui/: keyboard.cpp  main_ui.cpp  ui.cpp
release/: AImGui  AImGui.dex  AImGui.sha256
scripts/: compile_bloom_vk_shaders.sh
